--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  firebase_auth: ^4.19.2
+  firebase_core: ^2.30.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
+  get_it: ^7.7.0
   go_router: ^13.2.4
 
 dev_dependencies:
