--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  cloud_firestore: ^4.17.2
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   expansion_tile_group: ^1.2.4
